Bug 4153 - Problem in return value of asn1_check_enumerated() in Asn1.c
Summary: Problem in return value of asn1_check_enumerated() in Asn1.c
Status: RESOLVED FIXED
Alias: None
Product: Samba 3.0
Classification: Unclassified
Component: File Services (show other bugs)
Version: 3.0.22
Hardware: x86 Linux
: P3 normal
Target Milestone: none
Assignee: Joseph Sutton
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-10-06 02:48 UTC by RSJ
Modified: 2021-04-06 08:41 UTC (History)
0 users

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description RSJ 2006-10-06 02:48:27 UTC
When values are not matched , data->has_error must be true , so that the caller of asn1_check_enumerated() can check for errors ,but it is False in case of errors so the caller will not be able to check the fail case.
Comment 1 Derrell Lipman 2007-01-29 20:06:34 UTC
There's no obvious 'Component' for ASN formatter/parser issues.  Setting to File Services and hopefully someone who works on the ASN code will pick this up.

Derrell
Comment 2 Andrew Bartlett 2021-03-18 23:18:58 UTC
I'm incredibly pleased to say this code is unused, and can be removed.
Comment 3 Samba QA Contact 2021-04-01 17:51:03 UTC
This bug was referenced in samba master:

97e657b89b63f1df1e3280ffc563876c27439f44
Comment 4 Volker Lendecke 2021-04-06 08:41:24 UTC
It's in master now, I don't think we need backports